@@ -1,3 +1,8 @@
+2003-07-10  Fumitoshi UKAI  <ukai@ukai.org>
+
+	* w3mimg/fb/fb_img.h (get_image_size): add missing prototypes
+	* w3mimg/fb/fb.c (fb_clear): unused variable `j'
+
 2003-07-09  Hiroyuki Ito <hito@crl.go.jp>
 
 	* [w3m-dev 03935] Re: clear image
@@ -7911,4 +7916,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.848 2003/07/09 15:02:28 ukai Exp $
+$Id: ChangeLog,v 1.849 2003/07/09 15:07:10 ukai Exp $
